# tam-api

./: .env.prod.example  .gitignore  .swp  =0.0.47  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  init_db.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.ini  requirements.txt  server-setup.sh  start-reload.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml  pr_test.yml  ruff.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0369b3a55f5c_user_story_model_enhacment.py  099ee47ddc7c_backlog_modle.py  0b7a3f896ea4_update_todo_model.py  0c68957eb259_user_auth_table.py  18860d36a0d4_remove_room_id_from_sprint_table.py  1e8877954da3_add_key_result_fk_in_backlog_and_todo_.py  1f0042cd6285_change_todo_model.py  24e20c53ac6f_user_has_many_tasks_relationship.py  4b35435b2753_add_email_model.py  (+14 more)
app/celery_worker/: app.py  send_email_task.py  tasks.py
app/common/: assets_reader.py  check_envs.py  create_email_log.py  email_has_received_message.py  enums.py  fill_placeholders.py  generate_random_id_uuid.py  logging.py  make_message.py  models.py  redis_client.py  schemas.py  send_email.py  utils.py  verify_token.py  websocket_admin.py
app/db/: db.py
app/scripts/: dummy-data.py
core/langChain/: agent.py  agent_task_breakdown_simple.py  auto_tasks_simple.py  db_langchain.py  dependency.py  initialize_agent.py  routes.py  utils.py
nginx/: nginx-init.conf  nginx.conf
testing/: conftest.py
tests/: conftest.py
(+96 files in other folders)
