[project]
name = "vc-api"
version = "0.1.0"

[tool.uv]
managed = false

[tool.ruff]
exclude = [
  ".direnv",
  ".git",
  ".pyenv",
  ".vscode",
  "venv",
  ".venv",
  ".pytest_cache",
  ".mypy_cache",
  "__pycache__",
  "app/alembic/*",
  "E712"

]

line-length = 120
target-version = "py312"


[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "W",  # pycodestyle
  "I",  # isort
  "B",  # flake8-bugbear
  "UP", # pyupgrade
]

ignore = [
  "B008", # Do not perform function calls in argument defaults
  "B006", # Do not use mutable data structures for argument defaults
  "B904", # Within an except clause, raise exceptions with ...
  "E712",
  "B026", # Star-arg unpacking after a keyword argument is strongly discouraged
]

[tool.ruff.lint.per-file-ignores]
"**/testing/*" = [
  "E501", # line too long
  "B011", # Do not call assert False since python -O removes these calls
  "B007", # Loop control variable {name} not used within loop body
]

"**/alembic/*" = [
  "E501", # line too long
]


[tool.ruff.lint.isort]
split-on-trailing-comma = false


[tool.ruff.format]
quote-style = "double"
line-ending = "auto"


[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

ignore_missing_imports = true
exclude = ["alembic", "venv", ".venv", ".direnv"]
